[gd_scene load_steps=7 format=3 uid="uid://72ij81x63h3m"]

[ext_resource type="Script" path="res://distractions/dance_break.gd" id="1_5cxm7"]
[ext_resource type="Texture2D" uid="uid://djpyga7gchssw" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_arrow_left.png" id="2_rcelj"]
[ext_resource type="Texture2D" uid="uid://dpeys1l3te3gv" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_arrow_up.png" id="3_b4irr"]
[ext_resource type="Texture2D" uid="uid://ccyjhp0noh04m" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_arrow_down.png" id="4_8f4ry"]
[ext_resource type="Texture2D" uid="uid://d4ahxrft0kest" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_arrow_right.png" id="5_mickr"]
[ext_resource type="AudioStream" uid="uid://b42ie3soiflwp" path="res://assets/dance.mp3" id="6_tg80o"]

[node name="DanceBreak" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cxm7")

[node name="Left" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 824.0
offset_right = 448.0
offset_bottom = 952.0
texture_normal = ExtResource("2_rcelj")
stretch_mode = 0

[node name="Up" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 816.0
offset_right = 856.0
offset_bottom = 944.0
texture_normal = ExtResource("3_b4irr")
stretch_mode = 0

[node name="Down" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1160.0
offset_top = 800.0
offset_right = 1288.0
offset_bottom = 928.0
texture_normal = ExtResource("4_8f4ry")
stretch_mode = 0

[node name="Right" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1536.0
offset_top = 808.0
offset_right = 1664.0
offset_bottom = 936.0
texture_normal = ExtResource("5_mickr")
stretch_mode = 0

[node name="Target" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 256.0
offset_right = 1136.0
offset_bottom = 512.0
texture = ExtResource("4_8f4ry")

[node name="Dancing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tg80o")
autoplay = true

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
